--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="google-adsense-account" content="ca-pub-3639147338737274">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274"
+            crossorigin="anonymous">
+        </script>
         
         <title>Visual Lotto Board</title>
         <link rel="icon" type="image/png" href="./Assets/logo.png">
