--- a/classification.html
+++ b/classification.html
@@ -46,9 +46,9 @@
     </style>
 </head>
 <body>
-    <button id="show">hear</button>
+    <button id="show">button</button>
 <!-- <dialog> -->
-<button id="close">see</button>
+    <button id="close">button</button>
     <div>
         <div class="wrapper">
             <table>
