--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
+
+    <title>Royal Board | Baba Ijebu</title>
 
     <link rel="stylesheet" href="tableStyles.css">
 
