--- a/GAMES/6Diamond.html
+++ b/GAMES/6Diamond.html
@@ -252,21 +252,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">11</td>
-                    <td class="days"><small><sup></sup></small></td>
+                    <td class="days"><small>mon 6th, Nov</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">15</td>
+                    <td class="winning">37</td>
+                    <td class="winning">11</td>
+                    <td class="winning">50</td>
+                    <td class="winning" id="lbw">85</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">82</td>
+                    <td class="machine">1</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">18</td>
                 </tr>
             </tbody>
 
