--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <!-- <aside> 
                 <iframe class="dialog" src="dialog.html"></iframe>
             </aside>   -->
-            <aside class="classification-wrapper" id="dragClassification" draggable="true" >
+            <!-- <aside class="classification-wrapper" id="dragClassification" draggable="true" >
                 <iframe src="classification.html" class="classification"  id="dis"></iframe>
-            </aside> 
+            </aside>  -->
             <aside  class="disclaimer">
                 <p><strong>Disclaimer</strong></p> 
                 <p class="disclaim-message"> Hologuti Business Centre <b>(HBC)</b>'s <i>Visual Lotto Board (VLB)</i> is created for entertainment purposes only. 
