--- a/GAMES/8Bingo.html
+++ b/GAMES/8Bingo.html
@@ -252,7 +252,29 @@
         <tbody>
             <tr>
                 <td class="serial-num">11</td>
-                <td class="days"><small><sup></sup></small></td>
+                <td class="days"><small>mon 6th, Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">62</td>
+                <td class="winning">55</td>
+                <td class="winning">38</td>
+                <td class="winning">83</td>
+                <td class="winning" id="lbw">1</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">77</td>
+                <td class="machine">54</td>
+                <td class="machine">36</td>
+                <td class="machine">70</td>
+                <td class="machine" id="lbm">52</td>
+            </tr>
+        </tbody>
+
+                                <!-- day12-->
+        <tbody>
+            <tr>
+                <td class="serial-num">12</td>
+                <td class="days"><small></small></td>
            
                 <!-- winning-->
                 <td class="winning"></td>
