--- a/GAMES/10Inter.html
+++ b/GAMES/10Inter.html
@@ -30,7 +30,7 @@
         <tbody>
             <tr>
                 <td class="serial-num">1</td>
-                <td class="days"><small>monday 2<sup>nd</sup>nd</small></td>
+                <td class="days"><small>monday 2<sup>nd</sup></small></td>
                
                 <!-- winning-->
                 <td class="winning">60</td>
