--- a/GAMES/19MSP.html
+++ b/GAMES/19MSP.html
@@ -183,6 +183,28 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
+                                <!-- day8-->
+        <tbody>
+            <tr>
+                <td class="serial-num">8</td>
+                <td class="days"><small></small></td>
+                
+                <!-- winning-->
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning" id="lbw"></td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm"></td>
+                <td class="machine"></td>
+                <td class="machine"></td>
+                <td class="machine"></td>
+                <td class="machine" id="lbm"></td>
+            </tr>
+        </tbody>
                         
 
 
