Given title and input Adsense code

--- a/GAMES/3Enugu.html
+++ b/GAMES/3Enugu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
 
-    <title></title>
+    <title>Enugu Result | Baba Ijebu</title>
 
     <link rel="stylesheet" href="tableStyles.css">
 </head>
@@ -307,6 +307,16 @@
     
 
 
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
+    <!-- Source -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3639147338737274"
+        data-ad-slot="9690547982"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>   
 </body>
 </html>
