--- a/GAMES/11Gold.html
+++ b/GAMES/11Gold.html
@@ -255,21 +255,21 @@
         <tbody>
             <tr>
                 <td class="serial-num">11</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>tues 7th Nov</small></td>
                
                 <!-- winning-->
+                <td class="winning">N</td>
+                <td class="winning">o</td>
+                <td class="winning">t</td>
                 <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning" id="lbw"></td>
+                <td class="winning" id="lbw">w</td>
 
                 <!-- machine-->
-                <td class="machine" id="fbm"></td>
-                <td class="machine"></td>
-                <td class="machine"></td>
-                <td class="machine"></td>
-                <td class="machine" id="lbm"></td>
+                <td class="machine" id="fbm">r</td>
+                <td class="machine">i</td>
+                <td class="machine">t</td>
+                <td class="machine">e</td>
+                <td class="machine" id="lbm">n</td>
             </tr>
         </tbody>
 
