--- a/GAMES/13Jackpot.html
+++ b/GAMES/13Jackpot.html
@@ -255,8 +255,30 @@
         <tbody>
             <tr>
                 <td class="serial-num">11</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>tues 7th Nov</small></td>
                
+                <!-- winning-->
+                <td class="winning">2</td>
+                <td class="winning">25</td>
+                <td class="winning">54</td>
+                <td class="winning">63</td>
+                <td class="winning" id="lbw">50</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">85</td>
+                <td class="machine">1</td>
+                <td class="machine">82</td>
+                <td class="machine">27</td>
+                <td class="machine" id="lbm">69</td>
+            </tr>
+        </tbody>
+
+                                <!-- day12-->
+        <tbody>
+            <tr>
+                <td class="serial-num">12</td>
+                <td class="days"><small></small></td>
+           
                 <!-- winning-->
                 <td class="winning"></td>
                 <td class="winning"></td>
@@ -272,6 +294,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
 
 
 
