--- a/GAMES/20LUCKY-G.html
+++ b/GAMES/20LUCKY-G.html
@@ -145,7 +145,29 @@
         <tbody>
             <tr>
                 <td class="serial-num">6</td>
-                <td class="days"><small><sup></sup></small></td>
+                <td class="days"><small>7th</small></td>
+           
+                <!-- winning-->
+                <td class="winning">38</td>
+                <td class="winning">35</td>
+                <td class="winning">4</td>
+                <td class="winning">83</td>
+                <td class="winning" id="lbw">27</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">88</td>
+                <td class="machine">64</td>
+                <td class="machine">16</td>
+                <td class="machine">73</td>
+                <td class="machine" id="lbm">81</td>
+            </tr>
+        </tbody>
+
+                                <!-- day7-->
+        <tbody>
+            <tr>
+                <td class="serial-num">7</td>
+                <td class="days"><small></small></td>
            
                 <!-- winning-->
                 <td class="winning"></td>
@@ -162,6 +184,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
     </table>
 
    
