--- a/GAMES/14Club-m.html
+++ b/GAMES/14Club-m.html
@@ -255,6 +255,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">11</td>
+                <td class="days"><small>tues 7th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">41</td>
+                <td class="winning">54</td>
+                <td class="winning">82</td>
+                <td class="winning">44</td>
+                <td class="winning" id="lbw">71</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">78</td>
+                <td class="machine">74</td>
+                <td class="machine">46</td>
+                <td class="machine">70</td>
+                <td class="machine" id="lbm">56</td>
+            </tr>
+        </tbody>
+
+                                <!-- day12-->
+        <tbody>
+            <tr>
+                <td class="serial-num">12</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
@@ -272,6 +294,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
 
 
 
