--- a/GAMES/15Super.html
+++ b/GAMES/15Super.html
@@ -255,8 +255,30 @@
         <tbody>
             <tr>
                 <td class="serial-num">11</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>tues 7th Nov</small></td>
                
+                <!-- winning-->
+                <td class="winning">12</td>
+                <td class="winning">63</td>
+                <td class="winning">68</td>
+                <td class="winning">88</td>
+                <td class="winning" id="lbw">54</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">37</td>
+                <td class="machine">55</td>
+                <td class="machine">14</td>
+                <td class="machine">76</td>
+                <td class="machine" id="lbm">38</td>
+            </tr>
+        </tbody>
+
+                                <!-- day12-->
+        <tbody>
+            <tr>
+                <td class="serial-num">12</td>
+                <td class="days"><small></small></td>
+           
                 <!-- winning-->
                 <td class="winning"></td>
                 <td class="winning"></td>
@@ -272,6 +294,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
 
 
 
