--- a/index.html
+++ b/index.html
@@ -127,14 +127,6 @@
                     <div class="frame">
                         <iframe scrolling="no" src="./GAMES/25National.html"></iframe> 
                     </div>
-                    
-
-                    <!-- <div class="double-games">
-                    </div>
-                    <div class="double-games">
-                    </div>
-                    <div class="double-games">
-                    </div> -->
                 </div>
             </section>
             <!-- <aside> 
@@ -167,6 +159,7 @@
                     <a href="https://twitter.com/hologutiBcentre" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
                     <a href="https://www.facebook.com/hologutiBusines" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"></i></a>
+                    <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </address>
         </footer> 
