--- a/GAMES/2Mark-II.html
+++ b/GAMES/2Mark-II.html
@@ -283,6 +283,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">12</td>
+                <td class="days"><small>wed 8th Nov</small></td>
+               
+                <!-- winning-->
+                <td class="winning">65</td>
+                <td class="winning">81</td>
+                <td class="winning">84</td>
+                <td class="winning">40</td>
+                <td class="winning" id="lbw">21</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">46</td>
+                <td class="machine">90</td>
+                <td class="machine">33</td>
+                <td class="machine">7</td>
+                <td class="machine" id="lbm">5</td>
+            </tr>
+        </tbody>
+
+                                <!-- day13-->
+        <tbody>
+            <tr>
+                <td class="serial-num">13</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
@@ -300,6 +322,8 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
+
 
 
 
