--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Hologuti Business Centre's visual lotto board is a website for Baba Ijebu and premier lotto result">
+        <link rel="icon" type="image/png" href="/Assets/hbc-logo-edit.jpg">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
         
         <title>Visual Lotto Board</title>
