--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -326,6 +326,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">12</td>
+                <td class="days"><small>fri 10th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">48</td>
+                <td class="winning">60</td>
+                <td class="winning">35</td>
+                <td class="winning">8</td>
+                <td class="winning" id="lbw">15</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">90</td>
+                <td class="machine">37</td>
+                <td class="machine">70</td>
+                <td class="machine">72</td>
+                <td class="machine" id="lbm">63</td>
+            </tr>
+        </tbody>
+
+                                <!-- day13-->
+        <tbody>
+            <tr>
+                <td class="serial-num">13</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
