Result Sunday 12/11/2023 incomplete

--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-
     <title>Royal Result | Baba Ijebu</title>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="tableStyles.css">
 
     <!-- <style>
@@ -348,6 +347,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">13</td>
+                <td class="days"><small>sun 12th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">39</td>
+                <td class="winning">6</td>
+                <td class="winning">27</td>
+                <td class="winning">90</td>
+                <td class="winning" id="lbw">77</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">25</td>
+                <td class="machine">84</td>
+                <td class="machine">45</td>
+                <td class="machine">73</td>
+                <td class="machine" id="lbm">18</td>
+            </tr>
+        </tbody>
+
+                                <!-- day14-->
+        <tbody>
+            <tr>
+                <td class="serial-num">14</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
