--- a/GAMES/25National.html
+++ b/GAMES/25National.html
@@ -137,7 +137,7 @@
         <tbody>
             <tr>
                 <td class="serial-num">6</td>
-                <td class="days"><small>11th</small></td>
+                <td class="days"><small>11th Nov</small></td>
             
                 <!-- winning-->
                 <td class="winning">25</td>
@@ -177,7 +177,7 @@
             </tr>
         </tbody>
 
-                                <!-- day7-->
+                                <!-- day8-->
        
 
 
