Result Monday 13/11/2023 including TOTA

--- a/GAMES/5Tota.html
+++ b/GAMES/5Tota.html
@@ -306,18 +306,18 @@
                     <td class="days"><small>sun 12th Nov</small></td>
                    
                     <!-- winning-->
-                    <td class="winning">D</td>
-                    <td class="winning">E</td>
-                    <td class="winning">L</td>
-                    <td class="winning">A</td>
-                    <td class="winning" id="lbw">Y</td>
+                    <td class="winning">49</td>
+                    <td class="winning">5</td>
+                    <td class="winning">80</td>
+                    <td class="winning">60</td>
+                    <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">E</td>
-                    <td class="machine">D</td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">16</td>
+                    <td class="machine">71</td>
+                    <td class="machine">26</td>
+                    <td class="machine" id="lbm">81</td>
                 </tr>
             </tbody>
 
