--- a/GAMES/19MSP.html
+++ b/GAMES/19MSP.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Monday Special | Baba Ijebu</title>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-
-    <title></title>
-
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -166,21 +165,21 @@
         <tbody>
             <tr>
                 <td class="serial-num">7</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>13th Nov</small></td>
                 
                 <!-- winning-->
-                <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning"></td>
-                <td class="winning" id="lbw"></td>
+                <td class="winning">50</td>
+                <td class="winning">1</td>
+                <td class="winning">37</td>
+                <td class="winning">19</td>
+                <td class="winning" id="lbw">76</td>
 
                 <!-- machine-->
-                <td class="machine" id="fbm"></td>
-                <td class="machine"></td>
-                <td class="machine"></td>
-                <td class="machine"></td>
-                <td class="machine" id="lbm"></td>
+                <td class="machine" id="fbm">44</td>
+                <td class="machine">78</td>
+                <td class="machine">74</td>
+                <td class="machine">84</td>
+                <td class="machine" id="lbm">88</td>
             </tr>
         </tbody>
 
