--- a/GAMES/12O6.html
+++ b/GAMES/12O6.html
@@ -300,6 +300,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">13</td>
+                <td class="days"><small>tues 14th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">13</td>
+                <td class="winning">56</td>
+                <td class="winning">81</td>
+                <td class="winning">35</td>
+                <td class="winning" id="lbw">28</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">7</td>
+                <td class="machine">83</td>
+                <td class="machine">34</td>
+                <td class="machine">6</td>
+                <td class="machine" id="lbm">53</td>
+            </tr>
+        </tbody>
+
+                                <!-- day14-->
+        <tbody>
+            <tr>
+                <td class="serial-num">14</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
