--- a/GAMES/13Jackpot.html
+++ b/GAMES/13Jackpot.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-
     <title>Jackpot Result | Baba Ijebu</title>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -299,6 +298,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">13</td>
+                <td class="days"><small>tues 14th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">34</td>
+                <td class="winning">5</td>
+                <td class="winning">37</td>
+                <td class="winning">4</td>
+                <td class="winning" id="lbw">71</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">44</td>
+                <td class="machine">28</td>
+                <td class="machine">67</td>
+                <td class="machine">76</td>
+                <td class="machine" id="lbm">22</td>
+            </tr>
+        </tbody>
+
+                                <!-- day14-->
+        <tbody>
+            <tr>
+                <td class="serial-num">14</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
