--- a/GAMES/14Club-m.html
+++ b/GAMES/14Club-m.html
@@ -298,6 +298,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">13</td>
+                <td class="days"><small>tues 14th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">74</td>
+                <td class="winning">44</td>
+                <td class="winning">6</td>
+                <td class="winning">57</td>
+                <td class="winning" id="lbw">4</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">18</td>
+                <td class="machine">63</td>
+                <td class="machine">88</td>
+                <td class="machine">78</td>
+                <td class="machine" id="lbm">40</td>
+            </tr>
+        </tbody>
+
+                                <!-- day14-->
+        <tbody>
+            <tr>
+                <td class="serial-num">14</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
