--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
         
-        <!-- <link rel="icon" type="image/png" href="./Assets/logo.png"> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
@@ -53,9 +52,12 @@
             </nav>
         </header>
         <main>
-            <div class="page-ort-wrapper">
-                <h4>Page Orientation</h4>
-                <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
+            <div class="btn-container">
+                <div class="page-ort-wrapper">
+                    <h4>Page Orientation</h4>
+                    <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
+                </div>
+                <button class="buy-lrCard">Buy LR Card</button>
             </div>
             <section>
                 <div class="iframe-container" id="iframeContainer">
