--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li><a href="./GAMES/23Bonanza.html">Bonanza</a></li>
                     <li><a href="./GAMES/24King.html"> Premier King</a></li>
                     <li><a href="./GAMES/25National.html">National</a></li>
+                    <li><a href="./GAMES/dailyResult.html"  class="dailyResult">Check Daily Result</a></li>
                 </ul>
             </nav>
         </header>
