--- a/GAMES/23Bonanza.html
+++ b/GAMES/23Bonanza.html
@@ -160,6 +160,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">7</td>
+                <td class="days"><small>17th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">79</td>
+                <td class="winning">84</td>
+                <td class="winning">52</td>
+                <td class="winning">44</td>
+                <td class="winning" id="lbw">16</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">6</td>
+                <td class="machine">54</td>
+                <td class="machine">55</td>
+                <td class="machine">73</td>
+                <td class="machine" id="lbm">31</td>
+            </tr>
+        </tbody>
+
+                                <!-- day8-->
+        <tbody>
+            <tr>
+                <td class="serial-num">8</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
