--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visual Lotto Board</title>
-        <meta name="description" content="Hologuti Business Centre's visual lotto board is a website for Baba Ijebu and premier lotto result">
+        <meta name="description" content="Hologuti Business Centre's visual lotto board is a website for viewing Baba Ijebu and premier lotto last results">
 
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
