--- a/GAMES/13Jackpot.html
+++ b/GAMES/13Jackpot.html
@@ -320,6 +320,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">14</td>
+                <td class="days"><small>fri 17th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">45</td>
+                <td class="winning">10</td>
+                <td class="winning">79</td>
+                <td class="winning">3</td>
+                <td class="winning" id="lbw">44</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">33</td>
+                <td class="machine">20</td>
+                <td class="machine">37</td>
+                <td class="machine">75</td>
+                <td class="machine" id="lbm">56</td>
+            </tr>
+        </tbody>
+
+                                <!-- day15-->
+        <tbody>
+            <tr>
+                <td class="serial-num">15</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
