--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -369,6 +369,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">14</td>
+                <td class="days"><small>fri 17th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">35</td>
+                <td class="winning">49</td>
+                <td class="winning">1</td>
+                <td class="winning">27</td>
+                <td class="winning" id="lbw">83</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">6</td>
+                <td class="machine">89</td>
+                <td class="machine">23</td>
+                <td class="machine">16</td>
+                <td class="machine" id="lbm">76</td>
+            </tr>
+        </tbody>
+
+                                <!-- day15-->
+        <tbody>
+            <tr>
+                <td class="serial-num">15</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
