--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -73,8 +73,8 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2 class="date">thurday 16/11/2023</h2>
+        <!-- <section> -->
+            <!-- <h2 class="date">thurday 16/11/2023</h2>
             <article>
                 <h3 class="game">People</h3>
                 <p>W: <span class="winning">29</span> - <span class="winning">33</span> - <span class="winning">46</span> - <span class="winning">37</span> - <span class="winning">66</span></p>
@@ -104,8 +104,8 @@
                 <h3 class="game">Bingo</h3>
                 <p>W: <span class="winning">87</span> - <span class="winning">15</span> - <span class="winning">58</span> - <span class="winning">36</span> - <span class="winning">17</span></p>
                 <p>M: <span class="machine">86</span> - <span class="machine">41</span> - <span class="machine">53</span> - <span class="machine">54</span> - <span class="machine">30</span></p>
-            </article>
-        </section>
+            </article> -->
+        <!-- </section> -->
         <section>
             <h2 class="date">Friday 17/11/2023</h2>
             <article>
@@ -137,6 +137,39 @@
                 <h3 class="game">Vag</h3>
                 <p>W: <span class="winning">37</span> - <span class="winning">83</span> - <span class="winning">47</span> - <span class="winning">54</span> - <span class="winning">87</span></p>
                 <p>M: <span class="machine">44</span> - <span class="machine">73</span> - <span class="machine">18</span> - <span class="machine">13</span> - <span class="machine">84</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date">saturday 18/11/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p>W: <span class="winning">62</span> - <span class="winning">31</span> - <span class="winning">81</span> - <span class="winning">86</span> - <span class="winning">70</span></p>
+                <p>M: <span class="machine">76</span> - <span class="machine">33</span> - <span class="machine">55</span> - <span class="machine">56</span> - <span class="machine">35</span></p>
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p>W: <span class="winning">90</span> - <span class="winning">5</span> - <span class="winning">35</span> - <span class="winning">32</span> - <span class="winning">72</span></p>
+                <p>M: <span class="machine">52</span> - <span class="machine">84</span> - <span class="machine">34</span> - <span class="machine">75</span> - <span class="machine">81</span></p>
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p>W: <span class="winning">63</span> - <span class="winning">86</span> - <span class="winning">41</span> - <span class="winning">73</span> - <span class="winning">88</span></p>
+                <p>M: <span class="machine">24</span> - <span class="machine">11</span> - <span class="machine">83</span> - <span class="machine">70</span> - <span class="machine">67</span></p>
+            </article>
+            <article>
+                <h3 class="game">O6</h3>
+                <p>W: <span class="winning">58</span> - <span class="winning">82</span> - <span class="winning">88</span> - <span class="winning">56</span> - <span class="winning">39</span></p>
+                <p>M: <span class="machine">81</span> - <span class="machine">90</span> - <span class="machine">38</span> - <span class="machine">24</span> - <span class="machine">74</span></p>
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p>W: <span class="winning">82</span> - <span class="winning">77</span> - <span class="winning">16</span> - <span class="winning">33</span> - <span class="winning">20</span></p>
+                <p>M: <span class="machine">10</span> - <span class="machine">24</span> - <span class="machine">88</span> - <span class="machine">34</span> - <span class="machine">37</span></p>
+            </article>
+            <article>
+                <h3 class="game">fair chance</h3>
+                <p>W: <span class="winning">65</span> - <span class="winning">54</span> - <span class="winning">4</span> - <span class="winning">52</span> - <span class="winning">71</span></p>
+                <p>M: <span class="machine">15</span> - <span class="machine">25</span> - <span class="machine">90</span> - <span class="machine">47</span> - <span class="machine">58</span></p>
             </article>
         </section>
     </main>
