--- a/GAMES/12O6.html
+++ b/GAMES/12O6.html
@@ -322,6 +322,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">14</td>
+                <td class="days"><small>sat 18th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">58</td>
+                <td class="winning">82</td>
+                <td class="winning">88</td>
+                <td class="winning">56</td>
+                <td class="winning" id="lbw">39</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">81</td>
+                <td class="machine">90</td>
+                <td class="machine">38</td>
+                <td class="machine">24</td>
+                <td class="machine" id="lbm">74</td>
+            </tr>
+        </tbody>
+
+                                <!-- day15-->
+        <tbody>
+            <tr>
+                <td class="serial-num">15</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
