--- a/GAMES/14Club-m.html
+++ b/GAMES/14Club-m.html
@@ -320,6 +320,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">14</td>
+                <td class="days"><small>sat 18th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">63</td>
+                <td class="winning">86</td>
+                <td class="winning">41</td>
+                <td class="winning">73</td>
+                <td class="winning" id="lbw">88</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">24</td>
+                <td class="machine">11</td>
+                <td class="machine">83</td>
+                <td class="machine">70</td>
+                <td class="machine" id="lbm">67</td>
+            </tr>
+        </tbody>
+
+                                <!-- day15-->
+        <tbody>
+            <tr>
+                <td class="serial-num">15</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
@@ -337,6 +359,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
 
 
 
