--- a/GAMES/24King.html
+++ b/GAMES/24King.html
@@ -160,6 +160,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">7</td>
+                <td class="days"><small>18th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">62</td>
+                <td class="winning">31</td>
+                <td class="winning">81</td>
+                <td class="winning">86</td>
+                <td class="winning" id="lbw">70</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">76</td>
+                <td class="machine">33</td>
+                <td class="machine">55</td>
+                <td class="machine">56</td>
+                <td class="machine" id="lbm">35</td>
+            </tr>
+        </tbody>
+
+                                <!-- day8-->
+        <tbody>
+            <tr>
+                <td class="serial-num">8</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
