--- a/GAMES/18Aseda.html
+++ b/GAMES/18Aseda.html
@@ -183,6 +183,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">8</td>
+                <td class="days"><small>19th Nov</small></td>
+               
+                <!-- winning-->
+                <td class="winning">29</td>
+                <td class="winning">31</td>
+                <td class="winning">71</td>
+                <td class="winning">62</td>
+                <td class="winning" id="lbw">73</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">69</td>
+                <td class="machine">80</td>
+                <td class="machine">53</td>
+                <td class="machine">74</td>
+                <td class="machine" id="lbm">57</td>
+            </tr>
+        </tbody>
+
+                                <!-- day9-->
+        <tbody>
+            <tr>
+                <td class="serial-num">9</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
@@ -200,6 +222,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+
 
 
 
