--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -391,6 +391,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>sun 19th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">66</td>
+                <td class="winning">32</td>
+                <td class="winning">27</td>
+                <td class="winning">50</td>
+                <td class="winning" id="lbw">12</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">84</td>
+                <td class="machine">19</td>
+                <td class="machine">16</td>
+                <td class="machine">89</td>
+                <td class="machine" id="lbm">28</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
