--- a/GAMES/2Mark-II.html
+++ b/GAMES/2Mark-II.html
@@ -344,6 +344,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>sun 19th Nov</small></td>
+               
+                <!-- winning-->
+                <td class="winning">81</td>
+                <td class="winning">73</td>
+                <td class="winning">19</td>
+                <td class="winning">37</td>
+                <td class="winning" id="lbw">38</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">88</td>
+                <td class="machine">46</td>
+                <td class="machine">24</td>
+                <td class="machine">90</td>
+                <td class="machine" id="lbm">79</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
