--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -73,72 +73,6 @@
         </nav>
     </header>
     <main>
-        <!-- <section> -->
-            <!-- <h2 class="date">thurday 16/11/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p>W: <span class="winning">29</span> - <span class="winning">33</span> - <span class="winning">46</span> - <span class="winning">37</span> - <span class="winning">66</span></p>
-                <p>M: <span class="machine">31</span> - <span class="machine">59</span> - <span class="machine">7</span> - <span class="machine">24</span> - <span class="machine">45</span></p>
-            </article>
-            <article>
-                <h3 class="game">fairchance</h3>
-                <p>W: <span class="winning">72</span> - <span class="winning">23</span> - <span class="winning">74</span> - <span class="winning">45</span> - <span class="winning">14</span></p>
-                <p>M: <span class="machine">12</span> - <span class="machine">87</span> - <span class="machine">13</span> - <span class="machine">69</span> - <span class="machine">4</span></p>
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p>W: <span class="winning">38</span> - <span class="winning">3</span> - <span class="winning">48</span> - <span class="winning">24</span> - <span class="winning">41</span></p>
-                <p>M: <span class="machine">50</span> - <span class="machine">61</span> - <span class="machine">87</span> - <span class="machine">46</span> - <span class="machine">56</span></p>
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p>W: <span class="winning">83</span> - <span class="winning">7</span> - <span class="winning">53</span> - <span class="winning">77</span> - <span class="winning">40</span></p>
-                <p>M: <span class="machine">19</span> - <span class="machine">51</span> - <span class="machine">28</span> - <span class="machine">63</span> - <span class="machine">58</span></p>
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p>W: <span class="winning">51</span> - <span class="winning">2</span> - <span class="winning">79</span> - <span class="winning">58</span> - <span class="winning">30</span></p>
-                <p>M: <span class="machine">66</span> - <span class="machine">37</span> - <span class="machine">21</span> - <span class="machine">16</span> - <span class="machine">10</span></p>
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p>W: <span class="winning">87</span> - <span class="winning">15</span> - <span class="winning">58</span> - <span class="winning">36</span> - <span class="winning">17</span></p>
-                <p>M: <span class="machine">86</span> - <span class="machine">41</span> - <span class="machine">53</span> - <span class="machine">54</span> - <span class="machine">30</span></p>
-            </article> -->
-        <!-- </section> -->
-        <section>
-            <h2 class="date">Friday 17/11/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p>W: <span class="winning">35</span> - <span class="winning">49</span> - <span class="winning">1</span> - <span class="winning">27</span> - <span class="winning">83</span></p>
-                <p>M: <span class="machine">6</span> - <span class="machine">89</span> - <span class="machine">23</span> - <span class="machine">16</span> - <span class="machine">76</span></p>
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p>W: <span class="winning">35</span> - <span class="winning">11</span> - <span class="winning">36</span> - <span class="winning">1</span> - <span class="winning">9</span></p>
-                <p>M: <span class="machine">74</span> - <span class="machine">15</span> - <span class="machine">26</span> - <span class="machine">88</span> - <span class="machine">34</span></p>
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p>W: <span class="winning">63</span> - <span class="winning">47</span> - <span class="winning">65</span> - <span class="winning">10</span> - <span class="winning">26</span></p>
-                <p>M: <span class="machine">2</span> - <span class="machine">87</span> - <span class="machine">73</span> - <span class="machine">23</span> - <span class="machine">4</span></p>
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p>W: <span class="winning">45</span> - <span class="winning">10</span> - <span class="winning">79</span> - <span class="winning">3</span> - <span class="winning">44</span></p>
-                <p>M: <span class="machine">33</span> - <span class="machine">20</span> - <span class="machine">37</span> - <span class="machine">75</span> - <span class="machine">56</span></p>
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p>W: <span class="winning">79</span> - <span class="winning">84</span> - <span class="winning">52</span> - <span class="winning">44</span> - <span class="winning">16</span></p>
-                <p>M: <span class="machine">6</span> - <span class="machine">54</span> - <span class="machine">55</span> - <span class="machine">73</span> - <span class="machine">31</span></p>
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p>W: <span class="winning">37</span> - <span class="winning">83</span> - <span class="winning">47</span> - <span class="winning">54</span> - <span class="winning">87</span></p>
-                <p>M: <span class="machine">44</span> - <span class="machine">73</span> - <span class="machine">18</span> - <span class="machine">13</span> - <span class="machine">84</span></p>
-            </article>
-        </section>
         <section>
             <h2 class="date">saturday 18/11/2023</h2>
             <article>
@@ -170,6 +104,39 @@
                 <h3 class="game">fair chance</h3>
                 <p>W: <span class="winning">65</span> - <span class="winning">54</span> - <span class="winning">4</span> - <span class="winning">52</span> - <span class="winning">71</span></p>
                 <p>M: <span class="machine">15</span> - <span class="machine">25</span> - <span class="machine">90</span> - <span class="machine">47</span> - <span class="machine">58</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date"> Sunday 19/11/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p>W: <span class="winning">66</span> - <span class="winning">32</span> - <span class="winning">27</span> - <span class="winning">50</span> - <span class="winning">12</span></p>
+                <p>M: <span class="machine">84</span> - <span class="machine">19</span> - <span class="machine">16</span> - <span class="machine">89</span> - <span class="machine">28</span></p>
+            </article>
+            <article>
+                <h3 class="game">Mark II</h3>
+                <p>W: <span class="winning">81</span> - <span class="winning">73</span> - <span class="winning">19</span> - <span class="winning">37</span> - <span class="winning">38</span></p>
+                <p>M: <span class="machine">88</span> - <span class="machine">46</span> - <span class="machine">24</span> - <span class="machine">90</span> - <span class="machine">79</span></p>
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p>W: <span class="winning">73</span> - <span class="winning">62</span> - <span class="winning">59</span> - <span class="winning">47</span> - <span class="winning">72</span></p>
+                <p>M: <span class="machine">19</span> - <span class="machine">80</span> - <span class="machine">17</span> - <span class="machine">61</span> - <span class="machine">46</span></p>
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p>W: <span class="winning">29</span> - <span class="winning">31</span> - <span class="winning">71</span> - <span class="winning">62</span> - <span class="winning">73</span></p>
+                <p>M: <span class="machine">69</span> - <span class="machine">80</span> - <span class="machine">53</span> - <span class="machine">74</span> - <span class="machine">57</span></p>
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p>W: <span class="winning">55</span> - <span class="winning">53</span> - <span class="winning">51</span> - <span class="winning">8</span> - <span class="winning">13</span></p>
+                <p>M: <span class="machine">5</span> - <span class="machine">39</span> - <span class="machine">63</span> - <span class="machine">45</span> - <span class="machine">68</span></p>
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p>W: <span class="winning">64</span> - <span class="winning">2</span> - <span class="winning">28</span> - <span class="winning">41</span> - <span class="winning">80</span></p>
+                <p>M: <span class="machine">32</span> - <span class="machine">51</span> - <span class="machine">37</span> - <span class="machine">47</span> - <span class="machine">19</span></p>
             </article>
         </section>
     </main>
