Inckuded inter to daily result

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -139,8 +139,8 @@
             </article>
             <article>
                 <h3 class="game">International</h3>
-                <p>W: <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span></p>
-                <p>M: <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span></p>
+                <p>W: <span class="winning">9</span> - <span class="winning">60</span> - <span class="winning">67</span> - <span class="winning">10</span> - <span class="winning">59</span></p>
+                <p>M: <span class="machine">36</span> - <span class="machine">78</span> - <span class="machine">90</span> - <span class="machine">83</span> - <span class="machine">75</span></p>
             </article>
         </section>
     </main>
